# GoalKeepr

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile.redis  README.md  bot.session-journal  database.py  docker-compose.yml  main.ini  main.py  manager.py  pyproject.toml  redis.conf  requirements.txt  startup.sh  web_admin.py  worker.py
.github/workflows/: deploy.yml  docker-image.yml
data/: bot.session  main.db
docker/: Dockerfile  startup.sh
docs/: image.md  issues.md  ver.202606.md
example/: main.ini
handlers/: __init__.py  default.py  left_member.py  left_members.py  member_captcha.py  message_counter.py  message_sent.py  new_members.py  update.py  utils.py
handlers/commands/: __init__.py  answer.py  asr.py  captcha_stats.py  chat.py  code.py  group_setting.py  id.py  image.py  img.py  k.py  sb.py  sdxl.py  setting.py  shorturl.py  shorturl_test.py  system_groups.py  system_usage.py  translate.py  tts.py  txt2img.py  whoami.py
handlers/member_captcha/: __init__.py  callbacks.py  config.py  events.py  exceptions.py  stats.py  (+7 more)
manager/: __init__.py  callback_handler.py  group.py  manager.py  settings.py
systemd/: goalkeepr.service
tests/: README.md  conftest.py  test_advertising.py  test_asr.py  test_asr_command.py  test_callbacks.py  test_comfy_api.py  test_events.py  test_group_settings.py  test_image.py  test_join_queue.py  test_llm_utils.py  test_manager_core.py  test_member_captcha.py  test_member_captcha_callbacks.py  test_quick.py  test_sdxl.py  test_security.py  test_security_mode.py  test_session.py  test_shorturl.py  test_stats.py  test_translate.py  test_tts.py  test_tts_command.py  test_txt_utils.py  test_web_admin.py
utils/: advertising.py  asr.py  chimera_gpt.py  comfy_api.py  comfy_workflow.py  google_gemini_webserver.py  google_gemini_webserver_test.py  sd_api.py  stripe_char.go  tg.py  tts.py
(+18 files in other folders)
