[project]
name = "goal-keepr"
version = "0.2.0"
description = "A telegram bot manage your group."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.22.1",
    "aiohttp>=3.13.2",
    "redis>=5.0.0",
    "beautifulsoup4>=4.14.3",
    "cryptography>=46.0.3",
    "edge-tts>=7.2.7",
    "loguru>=0.7.3",
    "orjson>=3.11.5",
    "pydub>=0.25.1",
    "telegramify-markdown>=0.5.4",
    "telethon>=1.36.0",
    "tiktoken>=0.12.0",
    "translators>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]